# nucleus-rs

./: .gitignore  Cargo.toml
src/: lib.rs  storage.rs
src/interfaces/: filesystem.rs
src/providers/: google_drive.rs  mod.rs  native_fs.rs  one_drive.rs  s3.rs
src/providers/google_drive/: mod.rs  serialization.rs  token.rs
src/providers/google_drive/interfaces/: filesystem.rs
src/providers/onedrive/: auth.rs  mod.rs  token.rs
src/providers/onedrive/interfaces/: filesystem.rs
