[package]
name = "nucleus-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
eyre = "0.6.8"
oauth2 = "4.2.3"
regex = "1.6.0"
reqwest = {version = "0.11.11", features = ["blocking"]}
rust-s3 = {version = "0.32.3", default-features = false, features = ["sync"]}
serde = "1.0.144"
serde_json = "1.0.85"
